# blacklight-erc-8004-demo

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/demo_erc8004/: 01_openai_request.py  02_register_agent.py  03_validation_request.py  04_validation_response.py  __init__.py
src/demo_erc8004/abi/: __init__.py  identity_registry.py  validation_registry.py
